<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 Zhihu Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>
    <string name="account">用户名</string>
    <string name="password">密码</string>

    <string name="pic">图片</string>
    <string name="photo">拍照</string>
    <string name="video">摄像</string>
    <string name="file">文件</string>

    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="album_name_all">全部</string>
    <string name="button_preview">预览</string>
    <string name="button_apply_default">使用</string>
    <string name="button_apply">使用(%1$d)</string>
    <string name="button_back">返回</string>
    <string name="photo_grid_capture">拍一张</string>
    <string name="empty_text">还没有图片或视频</string>
    <string name="button_ok">我知道了</string>

    <string name="error_over_count_default">您已经达到最大选择数量</string>
    <string name="error_over_count">最多只能选择 %1$d 个文件</string>
    <string name="error_under_quality">图片质量太低</string>
    <string name="error_over_quality">图片质量太高</string>
    <string name="error_file_type">不支持的文件类型</string>
    <string name="error_type_conflict">不能同时选择图片和视频</string>
    <string name="error_no_video_activity">没有支持视频预览的应用</string>
    <string name="error_over_original_size">"该照片大于 %1$d M，无法上传将取消勾选原图"</string>
    <string name="error_over_original_count">"有 %1$d 张照片大于 %2$d M\n无法上传，将取消勾选原图"</string>
    <string name="button_original">原图</string>
    <string name="button_sure_default">确定</string>
    <string name="button_sure">确定(%1$d)</string>
    <string name="face_recently">Recently</string>
    <string name="face_Emoji">Emoji</string>
    <string name="face_set_one">Default</string>

    <string name="action_photo">图片</string>
    <string name="action_video">视频</string>
    <string name="action_location">位置</string>
    <string name="action_file">文件</string>

    <string name="un_download">未下载</string>
    <string name="downloaded">已下载</string>
    <string name="downloading">下载中...</string>
    <string name="sending">发送中...</string>
    <string name="sended">已发送</string>

    <string name="self">我</string>
    <string name="user_sex">性别</string>
    <string name="user_location">所在地</string>
    <string name="user_birthday">生日</string>
    <string name="chat_to_top">置顶聊天</string>
    <string name="send_message">发送消息</string>
    <string name="send">发送</string>
    <string name="add_friend">添加好友</string>
    <string name="del_friend">删除好友</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="add_rule">添加好友认证方式</string>
    <string name="settings">设置</string>
    <string name="logout">注销</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="modify_signature">修改个性签名</string>

    <string name="group_members">群成员</string>
    <string name="group_join_apply">申请列表</string>
    <string name="group_type">群类型</string>
    <string name="add_group_member">增加成员</string>
    <string name="remove_group_member">移除成员</string>
    <string name="join_group_type">加群方式</string>
    <string name="in_group_nick_name">我的群昵称</string>
    <string name="dissolve">解散该群</string>
    <string name="modify_group_name">修改群名称</string>
    <string name="modify_group_notice">修改群公告</string>
    <string name="record_cancel_tips">手指上滑，取消发送</string>
    <string name="contacts">联系人</string>


    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="search">搜索</string>
    <string name="c2c_session_start">发消息</string>
    <string name="c2c_session_search_hint">请输入对方ID</string>
    <string name="create_group_chat">创建群聊</string>
    <string name="input_group_name">群聊名称</string>
    <string name="group_detail">群聊详情</string>
    <string name="input_group_notice">群公告</string>
    <string name="group_search_hint">请输入群组ID</string>
    <string name="join">加入</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="group_apply_members">群申请</string>
    <string name="accepted">已接受</string>
    <string name="refused">已拒绝</string>
    <string name="group_apply_tips">条入群申请</string>
    <string name="group_apply_click_handle">点击处理</string>
    <string name="group_remove_member">移出群聊</string>
    <string name="group_join_type">加群方式</string>
    <string name="modify_group_name_success">修改群名称成功</string>
    <string name="modify_group_notice_success">修改群通知成功</string>
    <string name="exit_group">退出群聊</string>
    <string name="modify_nickname_success">修改昵称成功</string>
    <string name="input_group_id_empty_tips">群组ID不能为空</string>
    <string name="input_group_type_empty_tips">请选择群类型</string>
    <string name="input_group_member_empty_tips">请选择群成员</string>
    <string name="join_group_type_empty_tips">请选择群加群方式</string>
    <string name="view_original_image">查看原图</string>

    <!-- 我们自己需要 -->
    <string name="custom_house_m2">㎡</string>
    <string name="custom_unitPrice_sell_m2">/㎡</string>
    <string name="custom_travel_adult">成人：</string>
    <string name="custom_travel_child">儿童：</string>
    <string name="custom_travel_return">返佣</string>
    <string name="custom_travel_depart_spot">出发地</string>
    <string name="custom_travel_goals_city">目的地</string>
    <string name="custom_travel_days">天</string>
    <string name="custom_travel_number_days">行程天数</string>
    <string name="custom_travel_hot_position">热门景点：</string>
    <string name="group_info_add_friend">邀请同行入群</string>
    <string name="group_info_check_more">查看更多本地同行</string>
    <string name="group_info_set_top">置顶聊天</string>
    <string name="group_info_msg_no_alert">消息免打扰</string>
    <string name="group_info_clear_record">清空聊天记录</string>
    <string name="group_info_quit_btn">删除并退出</string>
    <string name="group_info_not_owner">您不是群主，暂时无法删除群成员</string>
    <string name="delete">删除</string>
    <string name="group_delete_member">删除群成员</string>
    <string name="default_chat_name">与同业用户聊天</string>

</resources>