<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/list_phone_ed"
            android:hint="搜索"
            android:paddingLeft="30dp"
            android:textColorHint="@color/login_walling_fort"
            android:singleLine="true"
            android:imeOptions="actionGo"/>

        <ImageView
            android:id="@+id/ed_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_search" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/grey"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/group_member_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_add_iv"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_add"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_gravity="center_vertical"
            android:text="@string/group_info_add_friend"
            android:textSize="40px"
            android:textColor="#999999" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/group_info_check_more"
        android:textSize="40px"
        android:textColor="#999999" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="8dp"
        android:background="#F2F2F2"/>

    <LinearLayout
        android:id="@+id/set_top_ll"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/group_info_set_top"
            android:textSize="50px"
            android:textColor="#333333"/>

        <ImageView
            android:id="@+id/set_top_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="223dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/switch_close"
            android:layout_marginEnd="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:id="@+id/msg_no_alert_ll"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/group_info_msg_no_alert"
            android:textSize="50px"
            android:textColor="#333333"/>

        <ImageView
            android:id="@+id/msg_no_alert_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="208dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/switch_close"
            android:layout_marginEnd="8dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:id="@+id/clear_record_ll"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/group_info_clear_record"
            android:textSize="50px"
            android:textColor="#333333"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/grey"/>

    <Button
        android:id="@+id/quit_btn"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="33dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/group_info_quit_btn"
        android:textColor="@color/white"
        android:background="@color/red"/>

</LinearLayout>
