<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/zou_bian_line"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/photo_iv"
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="7dp"
        android:scaleType="fitXY" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/title_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp" >

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <LinearLayout
            android:id="@+id/depart_name_ll"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="7dp"
            android:background="#FFFF00"
            android:orientation="vertical">

            <TextView
                android:id="@+id/depart_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_travel_depart_spot"
                android:textColor="#999999"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <ImageView
            android:id="@+id/travel_arrows_icon"
            android:layout_width="18dp"
            android:layout_height="16dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/depart_name_ll"
            android:background="@drawable/icon_travel_arrows"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:id="@+id/goals_city_ll"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:background="#FFFF00"
            android:orientation="vertical"
            android:layout_toRightOf="@id/travel_arrows_icon">

            <TextView
                android:id="@+id/goals_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_travel_goals_city"
                android:textColor="#999999"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="23dp"
            android:background="#FFFF00"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberDays_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:text="@string/custom_travel_number_days"
                android:textColor="#999999"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp">

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/returnPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/totalPrice"
            android:layout_marginLeft="20dp"
            android:textColor="@color/red"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp">

        <TextView
            android:id="@+id/totalPriceChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#999999"/>

        <TextView
            android:id="@+id/returnPriceChild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/totalPriceChild"
            android:layout_marginLeft="20dp"
            android:textColor="#999999"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp">

        <TextView
            android:id="@+id/hot_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_travel_hot_position"
            android:textSize="28px"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hot_position_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_toRightOf="@+id/hot_position" />

    </RelativeLayout>
</LinearLayout>